# bearlang-app

./: README.md
app/: CMakeLists.txt  app.cpp  app.h
bearlang-app/: CMakeLists.txt
bearlang-app/app/: app.cpp
bearlang-app/app/core/codegen/: codegen.cpp  codegen.h
bearlang-app/app/core/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
bearlang-app/app/core/parser/: ast.h  parser.cpp  parser.h
bearlang-app/examples/: calculator.bear  hello_world.bear  loops.bear
